# fractals_api

./: Cargo.toml  README.md  test_endpoints.sh
.github/worflows/: rust.yml
.github/workflows/: deploy.yml  rust.yml
src/: grimoire.rs  index.html  main.rs  utils.rs
src/endpoints/: mod.rs  rendering.rs  static.rs
src/endpoints/pages/: coloring.html  index.html
src/shaders/: base_fragment.wgsl  burning_ship.wgsl  eye.wgsl  feather.wgsl  frag_test.wgsl  madelbrot.wgsl  tricorn.wgsl  vert.wgsl
src/structs/: mod.rs  rendering.rs  requests.rs
src/utils/: export.rs  graphics.rs  mod.rs  vec.rs
